Go-EKS-GitHubActions-Terraform-Helm-ArgoCD/chats/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: go-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: nginx
  rules:
  - host: starmarketing.it.com
    http:
      paths:
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-portfolio-svc
            port:
              number: 8080
      - path: /api/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 5000
